добавлена функция блокировки администратора и СУПЕР УЛЬТРА МЕГА КРУТАЯ КНОПКА ВЫХОДА!!!

--- a/CZN/App.config
+++ b/CZN/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="CZNEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-NFV6MI8\KRUTOI_SERVER;initial catalog=CZN;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CZNEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-NFV6MI8\KRUTOI_SERVER;initial catalog=CZN;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
